sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3: error: not found: value bubbleSort3
		bubbleSort3();
                ^AlgBubbleSort3:7: error: Boolean does not take parameters
    echange(j,j+1)
           ^